# pacto-bot-api

./: .gitignore  AGENTS.md  BUILDING.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  clippy.toml  deny.toml  pacto-bot-api.toml.example  pyproject.toml  requirements.txt
.beads/: .auto-import-issues.jsonl  config.yaml  interactions.jsonl  issues.jsonl
.claude/skills/python-pacto-bot/: SKILL.md
.github/workflows/: ci.yml  release.yml
docs/: pacto-bot-admin-llms.txt  python-sdk.md
docs/brainstorms/: 2026-06-28-python-examples-ci-contract-tests-requirements.md  2026-06-29-generated-python-client-requirements.md  2026-06-30-bot-scaffold-requirements.md
docs/ideation/: 2026-06-28-automated-behavior-tests-ideation.html
docs/plans/: 2026-06-24-001-feat-pacto-bot-api-daemon-executive-summary.md  2026-06-24-001-feat-pacto-bot-api-daemon-plan.md  2026-06-28-001-feat-python-examples-ci-contract-tests-plan.md  2026-06-29-003-feat-generated-python-client-plan.md  2026-06-30-001-feat-bot-scaffold-plan.md
examples/: README.md  conftest.py  echo_bot.manifest.json  echo_bot.py  requirements.txt  test-config.toml  test_echo_bot.py  test_examples_contract.py  test_manifest_validation.py
python/: README.md  pyproject.toml
python/examples/: greeting_bot.manifest.json  greeting_bot.py  joke_bot.manifest.json  joke_bot.py
python/scripts/: generate.py
python/src/pacto_bot_api/: __init__.py  bot.py  parser.py  transports.py
python/src/pacto_bot_api/_generated/: __init__.py  client.py  models.py
python/tests/: conftest.py  test_bot.py  test_client.py  test_generated_models.py  test_generator.py  test_transports.py
requirements/: coverage.json  report.json  report.md
schemas/: config.json  example-manifest.json  jsonrpc.json  metrics.json  service-compatibility.json
scripts/: generate_requirement_coverage.py  package-release.sh  pre-commit.sh  prep-release.sh
src/: admin.rs  bot_state.rs  bunker.rs  client_manager.rs  config.rs  config_generated.rs  db.rs  dev_env_probe.rs  diagnostics.rs  dispatch.rs  errors.rs  events.rs  guide.rs  handlers.rs  lib.rs  main.rs  metrics_generated.rs  nostr.rs  service_compatibility_generated.rs  signer.rs
src/scaffold/: generate.rs  mod.rs  safety.rs  template.rs
src/transport/: http.rs  mod.rs  protocol.rs  unix.rs
templates/python/: Dockerfile  README.md  bot.py  docker-compose.yml  manifest.json  manifest.toml  pyproject.toml  systemd.service
templates/python/project/: .dockerignore  .gitignore  README.md
templates/python/sdk/: pyproject.toml
templates/python/sdk/src/pacto_bot_api/: bot.py  transports.py
templates/python/tests/: test_bot.py  test_contract.py  test_http.py
tests/: admin_cli_bunker.rs  admin_cli_creation.rs  admin_cli_llms_txt_sync.rs  admin_cli_migration.rs  admin_cli_scaffold.rs  cli_args.rs  daemon_shutdown.rs  daemon_startup.rs  diagnostics.rs  dispatch_integration.rs  example_http_handler.rs  integration_test.rs  nostr_client.rs  requirement_coverage.rs  schema_sync.rs  secret_redaction.rs  transport_http.rs  transport_unix.rs
tests/common/: mod.rs
tests/support/: mock_bunker.rs  mock_relay.rs  mod.rs  secret_scan.rs
xtask/src/: codegen.rs  coverage.rs  main.rs
