[package]
name = "pacto-bot-api"
version = "0.1.0"
edition = "2024"
authors = ["Pacto Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/covenant-gov/pacto-bot-api"
description = "Standalone daemon that multiplexes Pacto bot identities over JSON-RPC"
rust-version = "1.85"

[[bin]]
name = "pacto-bot-api"
path = "src/main.rs"

[[bin]]
name = "pacto-bot-admin"
path = "src/admin.rs"

[workspace]
members = [".", "xtask"]
resolver = "3"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
rusqlite = { version = "0.34", features = ["bundled"] }
toml = "0.8"
axum = "0.8"
nostr-sdk = { version = "0.43", features = ["nip06", "nip44", "nip59"] }
nostr = { version = "0.40", features = ["nip46"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
secrecy = "0.10"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
schemars = "0.8"
jsonschema = "0.30"
proptest = "1"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
