[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pacto-bot-api"
version = "0.1.0"
description = "Generated Python SDK for the pacto-bot-api daemon"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pacto_bot_api"]
editable-mode = "lenient"

[tool.hatch.build.targets.wheel.force-include]
"src/pacto_bot_api" = "pacto_bot_api"

[tool.hatch.build.targets.sdist]
only-packages = true

[tool.hatch.build.targets.sdist.exclude]
paths = [
    "examples",
    "tests",
    "scripts",
    "skills",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
