[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{bot_id_snake}}"
version = "0.1.0"
description = "Bot handler for {{bot_id}}"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "pacto-bot-api>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build]
include = [
    "README.md",
    "{{bot_id_snake}}.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
